[gd_scene load_steps=3 format=4 uid="uid://yvws61rm42a8"]

[ext_resource type="Script" uid="uid://bmjpuchxw2cbo" path="res://scenes/premium_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ctd0qhiaqmdqt" path="res://textures/icons/token.png" id="2"]

[node name="PremiumPanel" type="Panel"]
custom_minimum_size = Vector2(0, 190)
anchor_right = 1.0
offset_bottom = 220.0
grow_horizontal = 2
theme_type_variation = &"MenuPanelTitle"
script = ExtResource("1")

[node name="IconPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.932
offset_left = 15.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = -0.0400085
mouse_filter = 2
theme_type_variation = &"BackPanel"

[node name="Icon" type="TextureRect" parent="IconPanel"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 35)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 1

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 160.0
offset_top = 14.0
offset_right = -191.0
offset_bottom = 205.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Name" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Daily Tokens"

[node name="Description" type="Label" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.686275, 0.34902, 1)
theme_override_constants/line_spacing = 0
text = "â€¢ Instantly receive 1400 Tokens"
vertical_alignment = 1
autowrap_mode = 3

[node name="Purchase" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -95.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_type_variation = &"ButtonHighlighted"

[node name="Cost" type="Label" parent="Purchase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
text = "$4.99"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Purchase" to="." method="_on_purchase_pressed"]
